--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "classnames": "^2.3.1",
         "clipboard": "^2.0.8",
         "css-vars-ponyfill": "^2.4.7",
+        "i18next": "^21.8.11",
         "licia": "^1.34.0",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
@@ -37,6 +38,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.0.9",
+        "react-i18next": "^11.17.4",
         "react-jss": "^10.7.1",
         "react-lazy-load-image-component": "^1.5.1",
         "react-qr-code": "^2.0.3",
