--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
         "nprogress": "^0.2.0",
         "postcss": "^7",
         "protobufjs": "^6.11.2",
+        "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.0.9",
         "react-i18next": "^11.17.4",
         "react-jss": "^10.7.1",
         "react-lazy-load-image-component": "^1.5.1",
-        "react-qr-code": "^2.0.3",
         "react-redux": "^7.2.4",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
