多语言本地化

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "clipboard": "^2.0.8",
         "css-vars-ponyfill": "^2.4.7",
         "i18next": "^21.8.11",
+        "i18next-browser-languagedetector": "^6.1.4",
         "licia": "^1.34.0",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
