--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-router-dom": "^5.1.8",
         "@types/redux-logger": "^3.0.9",
         "animate.css": "^4.1.1",
+        "aos": "^2.3.4",
         "autoprefixer": "^9",
         "axios": "^0.21.1",
         "classnames": "^2.3.1",
