--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
         "mutationobserver-shim": "^0.3.7",
         "normalizr": "^3.6.1",
         "nprogress": "^0.2.0",
-        "postcss": "^7",
         "protobufjs": "^6.11.2",
         "qrcode.react": "^3.1.0",
         "react": "^17.0.2",
@@ -109,6 +108,8 @@
         "husky": "^7.0.1",
         "lint-staged": "^11.1.1",
         "mrm": "^3.0.5",
+        "postcss": "8.2.2",
+        "postcss-100vh-fix": "^1.0.2",
         "postcss-px-to-viewport": "^1.1.1",
         "prettier": "^2.3.2",
         "sass": "^1.36.0",
