--- a/.env.mdev
+++ b/.env.mdev
@@ -1,4 +1,4 @@
-REACT_APP_NAME = '体育直播'
+REACT_APP_NAME = 'OKBET-盈樂贵宾会'
 REACT_APP_VERSION = 1.0.0
 REACT_APP_APP_ENV = mdev
-REACT_APP_API_URL = http://www.mzhibo.cc/
+REACT_APP_API_URL = http://192.168.0.118:16680
