--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/lodash": "^4.14.171",
         "@types/node": "^12.0.0",
         "@types/nprogress": "^0.2.0",
+        "@types/qs": "^6.9.7",
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
         "@types/react-lazy-load-image-component": "^1.5.2",
@@ -37,6 +38,7 @@
         "nprogress": "^0.2.0",
         "protobufjs": "^6.11.2",
         "qrcode.react": "^3.1.0",
+        "qs": "^6.11.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.0.9",
