--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
         "classnames": "^2.3.1",
         "clipboard": "^2.0.8",
         "css-vars-ponyfill": "^2.4.7",
+        "dayjs": "^1.11.3",
         "i18next": "^21.8.11",
         "i18next-browser-languagedetector": "^6.1.4",
         "licia": "^1.34.0",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
-        "moment": "^2.29.1",
         "mutationobserver-shim": "^0.3.7",
         "normalizr": "^3.6.1",
         "nprogress": "^0.2.0",
