--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@types/react": "^17.0.15",
         "@types/react-dom": "^17.0.9",
         "@types/react-lazy-load-image-component": "^1.5.2",
+        "@types/react-lazyload": "^3.2.0",
         "@types/react-redux": "^7.1.18",
         "@types/react-router-config": "^5.0.3",
         "@types/react-router-dom": "^5.1.8",
@@ -44,7 +45,7 @@
         "react-helmet-async": "^1.0.9",
         "react-i18next": "^11.17.4",
         "react-jss": "^10.7.1",
-        "react-lazy-load-image-component": "^1.5.1",
+        "react-lazyload": "^3.2.0",
         "react-redux": "^7.2.4",
         "react-router-config": "^5.1.1",
         "react-router-dom": "^5.2.0",
