--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "react-dom": "^17.0.2",
         "react-helmet-async": "^1.0.9",
         "react-i18next": "^11.17.4",
+        "react-infinite-scroll-component": "^6.1.0",
         "react-jss": "^10.7.1",
         "react-lazyload": "^3.2.0",
         "react-redux": "^7.2.4",
